# detox-task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/detox_task/: __main__.py
src/detox_task/adapters/broker/in_memory/: broker.py
src/detox_task/adapters/db/in_memory/: message_score_repository.py
src/detox_task/adapters/fapi/scores/: models.py  router.py
src/detox_task/application/common/interfaces/: broker.py  score_message_repository.py
src/detox_task/application/get_message_scores/: service.py
src/detox_task/application/score_message_consumer/: consumer.py
src/detox_task/domain/models/: message.py  message_score.py
src/detox_task/main/: __main__.py  depends_stub.py  di.py  message_consumer.py  web.py
src/detox_task/models/: message_score.py  score.py
src/detox_task/presentation/fapi/: index.py
src/detox_task/presentation/fapi/detox/: models.py  router.py
tests/: conftest.py
tests/integration/adapters/: test_healthcheck.py
tests/integration/presentation/: test_detox.py
tests/unit/main/: test_di.py
